Participants (only bug in overflow-x) and Settings done

--- a/src/components/modals/dataImportCheckModal/DataImportCheckModal.css
+++ b/src/components/modals/dataImportCheckModal/DataImportCheckModal.css
@@ -138,6 +138,6 @@
     border-radius: 5px;
     background: linear-gradient(0deg, #FFFFFF, #FFFFFF), linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 20px 20px 10px 20px;
+    padding: 20px 20px 5px 15px;
 }
 
